# internal/domain/ports/comment_usecase.go
@@ -9,5 +9,5 @@ import (
 
 type CommentUseCase interface {
 	UpdateAnswer(ctx context.Context, commentID, tenantID string, req request.UpdateCommentRequest) (*dto.CommentResponse, error)
-	GetComments(ctx context.Context, tenantID string, pagination *dto.PaginationRequest) (*dto.CommentsPaginationResponse, error)
+	GetComments(ctx context.Context, tenantID string, req *request.GetCommentsRequest) (*dto.CommentsPaginationResponse, error)
 }
